# roboto-lerobot-actions

./: README.md
enrich-lerobot-dataset/: .gitignore  DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml  requirements.dev.txt  requirements.runtime.txt
enrich-lerobot-dataset/scripts/: build.sh  deploy.sh  run.sh  run_container.sh
enrich-lerobot-dataset/src/enrich_lerobot_dataset/: __main__.py  entrypoint.py  images.py  lerobot_dataset.py  logger.py  main.py  roboto_dataset.py
enrich-lerobot-dataset/test/: test_main.py
integration-example/: README.md  main.py  pyproject.toml
mcap-to-lerobot/: .gitignore  DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml
mcap-to-lerobot/scripts/: build.sh  deploy.sh
mcap-to-lerobot/src/mcap_to_lerobot/: extract.py  lerobot.py  logger.py  main.py  mcap.py  types.py
mcap-to-lerobot/test/: test_main.py
