[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enrich_lerobot_dataset"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "roboto>=0.30.0",
    "lerobot",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
