[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcap_to_lerobot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # TODO
    "roboto @ /home/roboto/Documents/repos/roboto-lerobot-actions/mcap-to-lerobot/roboto-0.30.1.dev7+ge0dfa36a7.d20251027-py3-none-any.whl",
    "lerobot",
    "numpy",
    "pandas",
    "opencv-python"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
