[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcap_to_lerobot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "roboto >= 0.31.0",
    "lerobot",
    "numpy",
    "pandas",
    "opencv-python"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
